src/test/deca/codegen/invalid/created/division_by_zero.deca
// Description:
//    erreur lors de la divsion par zero
//
// Resultats:
//    erreur: divison par zero
//    
// 
// Historique:
//    cree le 15/01/2022

{
   println(2/0) ;
   println(2.0/0);
   println(2/0.0);
   println(2.0/0.0);


}